Fixed hidden menu overlap

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ header {
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 10;
 }
 .hidden-menu::before {
   content: '';
@@ -48,11 +49,14 @@ header {
   color: #fff;
   margin: 10px 0;
   text-decoration: none;
+  text-align: left;
+  border-left: 2px solid #FF3D00;
+  padding: 5px;
 }
 
 .hidden-menu > button:hover, .hidden-menu >  a:hover {
-  font-weight: 600;
   color: #FF3D00;
+  background-color: #1b1b1b;
 }
 
 .hidden-menu > .close-button {
@@ -60,10 +64,12 @@ header {
   text-decoration: underline;
   font-size: 14px;
   margin-top: 25px;
+  border: none;
 }
 .hidden-menu > .close-button:hover {
   color: #008cff;
   font-weight: 400;
+  background-color: inherit;
 }
 
 .hidden {
@@ -295,6 +301,13 @@ footer a:hover {
 
 
 @media screen and (max-width: 767px) {
+  .hidden-menu {
+    padding: 20px;
+  }
+  .hidden-menu > h2 {
+    font-size: 20px;
+  }
+
   header { 
     flex-direction: column;
   }
